--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -288,7 +288,7 @@
         "text": "Profile"
       },
       "logoutBtn":  {
-        "text": "Log out"
+        "text": "Sign out"
       }
     },
     "auth":       {
