--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -267,7 +267,7 @@
       }
     },
     "management": {
-      "header":        "Management",
+      "header":        "My shops",
       "createShopBtn": {
         "text": "Create my own shop"
       },
